# fastapi-tutorial

./: .gitignore  config.py  main.py  pyproject.toml  settings.py
apis/: __init__.py  posts.py  users.py
core/: settings.py
db/: config.py  models.py
handlers/: __init__.py  general.py  validate.py
routers/: posts.py  users.py
schemas/: __init__.py  schema_posts.py  schema_users.py
templates/: home.html  layout.html  post.html  user_posts.html
utils/: auth.py
views/: __init__.py  home.py  posts.py
