[project]
name = "fastapi-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "greenlet>=3.5.0",
    "psycopg2>=2.9.12",
    "sqlalchemy>=2.0.49",
]
